tests/baselines/reference/implementedPropertyContextualTyping2.errors.txt
tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping2.ts(20,1): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping2.ts(21,1): error TS2322: Type 'boolean' is not assignable to type 'string'.
tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping2.ts(22,1): error TS2322: Type 'number' is not assignable to type '[number, number]'.
  Property '0' is missing in type 'Number'.
tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping2.ts(23,24): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping2.ts (4 errors) ====
    interface Long {
        length: number;
    }
    interface Lol {
        canhaz: string;
    }
    interface Ceiling {
        location: { [coordinates: string]: [number, number] };
    }
    interface Invisible {
        invisibles: string[];
    }
    class Cat implements Long, Lol, Ceiling, Invisible {
        length = undefined;
        canhaz = null;
        location = {};
        invisibles = [];
    }
    const lolCat = new Cat();
    lolCat.length = "wat";
    ~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    lolCat.canhaz = false;
    ~~~~~~~~~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
    lolCat.location['ceiling'] = -1;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type '[number, number]'.
!!! error TS2322:   Property '0' is missing in type 'Number'.
    lolCat.invisibles.push(0);
                           ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    